--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<link rel="modulepreload" href="chunk-BH3NIRLV.js"><link rel="modulepreload" href="chunk-GTE3DQD6.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-TQK46BGH.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-HY74IRL2.js"><link rel="modulepreload" href="chunk-XVE5IWEF.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-CE36JMLO.js" type="module"></script></body>
 </html>
